# rust_web_play

./: Cargo.toml  LICENSE  README.md  start_test_server.sh
src/: func_plot.rs  lib.rs  mandelbrot.rs
www/: Cargo.toml  index.html
www/src/: ext.rs  main.rs  template.html
